# OCaml-GI-ctypes-bindings-generator

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Makefile  README.md  dune  dune-project  gi-bindings-generator.opam
docs/: index.mld  manual.mld
lib/: Bind_constant.ml  Bind_constant.mli  Bind_enum.ml  Bind_enum.mli  Bind_function.ml  Bind_function.mli  Bind_object.ml  Bind_object.mli  Bind_struct.ml  Bind_struct.mli  Bind_union.ml  Bind_union.mli  Binding_utils.ml  Binding_utils.mli  Loader.ml  Loader.mli  dune
tests/: Test_bind_constant.ml  Test_bind_enum.ml  Test_bind_function.ml  Test_bind_object.ml  Test_bind_struct.ml  Test_bind_union.ml  Test_binding_utils.ml  Test_loader.ml  Test_utils.ml  dune  test.ml
tools/: README.md  dune  raw_generator.ml
